--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -90,15 +90,17 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
 	%Pic of alexa, firefox vr, eye study 
 		\subsection{Browsers becoming operating systems}
-		One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy.So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer.The patches where already steps into the right direction and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously.
+		One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer.The patches where already steps into the right direction and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously.
+		
 		An good example for a website supporting Alan Kay's vision is lively-web.org
 		%Screenshot
-		Everything that is displayed on the website is an object and can be changed, moved or overwritten. In textfield Javascript code can be executed. 
+		Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application are able to edit and download it from everywhere.
+		%Before after Picture
 		%Book, 
-		\subsection{Future plans for browsers}
-		Firefox Reality
-		opera neon
-		Supermedium VR Browser
+		\subsection{Future plans of browsers}
+		\subsubsectio{Firefox} Reality
+		\subsubsection{opera neon}
+		\subsubsection{Supermedium VR Browser}
 		%https://medium.com/adventures-in-consumer-technology/web-browsers-of-the-future-6625aeccfbba
 		\subsection{Quantentechik?}
 		\subsection{Future based on past guess}
