Added Text to Firefox Reatily

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -94,17 +94,24 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		
 		An good example for a website supporting Alan Kay's vision is lively-web.org
 		%Screenshot
-		Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application are able to edit and download it from everywhere.
+		Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application and are able to edit and download it from everywhere.
 		%Before after Picture
 		%Book, 
 		\subsection{Future plans of browsers}
-		\subsubsectio{Firefox} Reality
-		\subsubsection{opera neon}
+		\subsubsection{Firefox Reality}
+		is a Virtual Reality browser making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browser makes it possible to watch 360 degrees videos or pictures and features a collection of games, environments and experiences created for VR. Developers are able to create WebVR Applications themself and upload them to \textit{Firefox Reality}\\
+		\begin{center}
+			\includegraphics[scale=0.35]{Firefox_Reality.png}
+		\end{center}
+		\source{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}
+		%https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/
 		\subsubsection{Supermedium VR Browser}
+		
+		\subsubsection{opera neon}
 		%https://medium.com/adventures-in-consumer-technology/web-browsers-of-the-future-6625aeccfbba
 		\subsection{Quantentechik?}
 		\subsection{Future based on past guess}
-		Little changed so farfaster, performance, Ux, Vr-> Being in a store? Getting closer to mini-operating system
+		Little changed so farfaster, performance, Ux, Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
 		\subsection{Devices}
 
 	\section{Evaluation}
