--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -3,6 +3,7 @@
 \bibliographystyle{splncs04}
 \usepackage[utf8]{inputenc}
 \usepackage{cmap}
+\usepackage{hyperref}
 \usepackage{graphicx}
 \graphicspath{{./Bilder/}}
 
@@ -43,11 +44,13 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Opera}
 		\textit{Opera} is one of the oldest browsers we have nowadays, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But \textit{Opera} gained enough popularity with version 2.1, which was in the on 9 December 1996 and introduced feateures like keyboard shortcuts, zoom and sessions.
 		\subsection{Safari}
-		\textit{Safari} is a browser exclusivly developed for iOS, which was released 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. The current version is 12.1.
+		\textit{Safari} is a browser exclusivly developed for iOS, which was released January 7th, 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. Safari was a pioneer in the browser segment, especially in the early years, but now it is failing to keep with its competitors. Since then the quality decreased from browser version to browser version, compared to its contestant. Currently we have the version 12.1 of the browser for all iOS systems.
 		\subsection{Google Chrome}
 		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to do their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well.
 		\subsection{Timeline of all browsers}		\includegraphics{TimelineOfWebBrowsers.png} 
-		A timeline of all browsers and browser versions ever made. [1]
+		A timeline of all browsers and browser versions ever made. [1]\\
+		\includegraphics[scale=0.45]{WebBrowserMarketShare.png}
+		\textit{\textbf{A market share timeline from 2009 to 2019 for the most used browsers.[2]}}
 		
 	\section{Evolution}
 		\subsection{The meaning of Evolution}
@@ -95,7 +98,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		%Before after Picture
 		%Book, 
 		\subsection{Future plans of browsers}
-		\subsubsectio{Firefox} Reality
+		\subsubsection{Firefox} Reality
 		\subsubsection{opera neon}
 		\subsubsection{Supermedium VR Browser}
 		%https://medium.com/adventures-in-consumer-technology/web-browsers-of-the-future-6625aeccfbba
@@ -108,6 +111,9 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 	\section{Summery/Conclusion}
 	\section{Sources}
-	[1] $https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Timeline\_of\_web\_browsers.svg/3560px-Timeline\_of\_web\_browsers.svg.png$
+	[1]\url{https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Timeline_of_web_browsers.svg/3560px-Timeline_of_web_browsers.svg.png} 
+	\newline
+	[2] \url{http://gs.statcounter.com/browser-market-share#monthly-200901-201905}
+	\newline
 
 \end{document}
