--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -99,12 +99,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		%Book, 
 		\subsection{Future plans of browsers}
 		\subsubsection{Firefox Reality}
-		is a Virtual Reality browser making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browser makes it possible to watch 360 degrees videos or pictures and features a collection of games, environments and experiences created for VR. Developers are able to create WebVR Applications themself and upload them to \textit{Firefox Reality}\\
+		is a Virtual Reality browser making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browser makes it possible to watch 360 degrees videos or pictures and features a collection of games, environments and experiences created for VR. Developers are able to create WebVR Applications themself and upload them to \textit{Firefox Reality}
 		\begin{center}
 			\includegraphics[scale=0.35]{Firefox_Reality.png}
-		\end{center}
-		\source{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}
-		%https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/
+			[3]	
+		\end{center}	%https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/
 		\subsubsection{Supermedium VR Browser}
 		
 		\subsubsection{opera neon}
@@ -118,9 +117,13 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 	\section{Summery/Conclusion}
 	\section{Sources}
+	%Oder als Subsections??
 	[1]\url{https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Timeline_of_web_browsers.svg/3560px-Timeline_of_web_browsers.svg.png} 
 	\newline
 	[2] \url{http://gs.statcounter.com/browser-market-share#monthly-200901-201905}
+	\newline
+	[3]
+	\url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}
 	\newline
 
 \end{document}
