Added some text to "SSL"

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -48,7 +48,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Google Chrome}
 		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to do their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well.
 		\subsection{Timeline of all browsers}		\includegraphics{TimelineOfWebBrowsers.png} 
-		A timeline of all browsers and browser versions ever made. [1]\\
+		\textit{\textbf{A timeline of all browsers and browser versions ever made. [1]}}\\
 		\includegraphics[scale=0.45]{WebBrowserMarketShare.png}
 		\textit{\textbf{A market share timeline from 2009 to 2019 for the most used browsers.[2]}}
 		
@@ -63,6 +63,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The original idea The webbrowser is being used by the server of the website to save textinformation on the Computer of the client. These have made it possible to save login and shopping cart informations but also made Webtracking possible. Later they received critizism for being able to damage the users privacy and threadening security when surfing the web. Under the EU's GDPR Law websites are now forced now ask and inform users about saving data in their Browser.
 			%http cookie wikipedia english/german and Book 
 			\subsubsection{SSL}
+			SSL is the short form for Secure Sockets Layers, which was an introduction of an security system in the internet. One could say that SSL is an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [4]. 
 			\subsubsection{CSS}
 			\subsubsection{Java}
 			\subsubsection{Scripting}
@@ -125,5 +126,6 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	[3]
 	\url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}
 	\newline
+	[4]\url{https://security.stackexchange.com/questions/19681/where-does-ssl-encryption-take-place}
 
 \end{document}
