--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -13,7 +13,7 @@
 Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 \begin{document}
-
+\raggedbottom
 \maketitle
 
 	\begin{abstract}
@@ -47,9 +47,9 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\textit{Safari} is a browser exclusivly developed for iOS, which was released January 7th, 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. Safari was a pioneer in the browser segment, especially in the early years, but now it is failing to keep with its competitors. Since then the quality decreased from browser version to browser version, compared to its contestant. Currently we have the version 12.1 of the browser for all iOS systems.
 		\subsection{Google Chrome}
 		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to do their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well.
-		\subsection{Timeline of all browsers}		\includegraphics{TimelineOfWebBrowsers.png} 
+		\subsection{Timeline of all browsers}		\includegraphics[scale=0.80]{TimelineOfWebBrowsers.png} 
 		\textit{\textbf{A timeline of all browsers and browser versions ever made. [1]}}\\
-		\includegraphics[scale=0.45]{WebBrowserMarketShare.png}
+		\includegraphics[scale=0.35]{WebBrowserMarketShare.png}
 		\textit{\textbf{A market share timeline from 2009 to 2019 for the most used browsers.[2]}}
 		
 	\section{Evolution}
@@ -99,16 +99,17 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		%Before after Picture
 		%Book, 
 		\subsection{New technologies}
-		\subsubsection{WebVR Browsers}
-		Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.
-		\begin{center}
-			\includegraphics[scale=0.35]{Firefox_Reality.png}
-			[4]	Firefox Reality
-			\includegraphics[scale=0.35]{Supermedium.png}
-			[5] Supermedium Browser
-		\end{center}	%https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/
-		\subsubsection{opera neon}
-		%https://medium.com/adventures-in-consumer-technology/web-browsers-of-the-future-6625aeccfbba
+			\subsubsection{WebVR Browsers}
+			Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.
+			\begin{center}
+				\includegraphics[scale=0.35]{Firefox_Reality.png}
+				[4]	Firefox Reality
+				\includegraphics[scale=0.35]{Supermedium.png}
+				[5] Supermedium Browser
+			\end{center}	
+			\subsubsection{AR Browsers}
+			let you access the web with using only your voice
+			%https://medium.com/adventures-in-consumer-technology/web-browsers-of-the-future-6625aeccfbba
 		\subsection{Quantentechik?}
 		\subsection{Future based on past guess}
 		Little changed so farfaster, performance, Ux, Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
