Wrote stuff to Tor Browser and Browsers nowadays

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -48,12 +48,13 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Google Chrome}
 		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to do their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well. Google also developed an engine for browsers called Chromium, which many browser competitors slowly start using for their own browsers.
 		\subsection{Tor Browser}
+		The \textit{Tor Browser} is a browser with one goal: internet user should have access to an uncensored web, without being tracked by anyone. Tor stands for "The Onion Routing", the technology that fuels the \textit{Tor Browser}. October 2002 the Tor network was deployed but no browser to access it, so people without technology experience were not able to access the network. The work on the \textit{Tor Browser} started in 2008 to help those without the knowledge to do so before. The browser was later on tool to many political movements, like the Arabic Spring in 2010, and popularity after Snowden's revelations in 2013.
 		\subsection{Timeline of all browsers}	\includegraphics[scale=0.80]{TimelineOfWebBrowsers.png} 
 		\textit{\textbf{A timeline of all browsers and browser versions ever made. [1]}}\\
 		\includegraphics[scale=0.35]{WebBrowserMarketShare.png}
 		\textit{\textbf{A market share timeline from 2009 to 2019 for the most used browsers.[2]}}
 		\subsection{Browser nowadays}
-		
+		Today Google Chrome dominates the browser market, with roughly 60\%-65\%. Safari is the follow up with 15\%-19\% and after that comes Mozilla Firefox with 4\%-6\% market share. Another fact to mention is that most browser use Chromium, the browser engine of Google, including Opera, Microsoft Edge and other browsers. The only widely used browsers that don't use Chromium are Mozilla Firefox and Safari. 
 	\section{Evolution}
 		\subsection{The meaning of Evolution}
 		With every new browser and browser version being released features and improvment have been added. Browsers became more secure, user and developer friendly, and more efficient. These were implemented because of new technologies, bugs being discovered and in trying to run out the competition. If you add all of the changes to a timeline you can overview the Evolution of the browser.
