--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -108,11 +108,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 				[5] Supermedium Browser
 			\end{center}	
 			\subsubsection{AR Browsers}
-			let you access the web with using only your voice
-			%https://medium.com/adventures-in-consumer-technology/web-browsers-of-the-future-6625aeccfbba
+			
+			%https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/
 		\subsection{Quantentechik?}
 		\subsection{Future based on past guess}
-		Little changed so farfaster, performance, Ux, Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
+		Little changed so farfaster, performance, Ux(Opera Neon), Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
 		\subsection{Devices}
 
 	\section{Evaluation}
