--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -37,7 +37,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina they met James H. Clark, the founde of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for an new Browser called \textit{Netscape}. So Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997.
 		\subsection{Netscape}
 		\textit{Netscape} marks the beginning of many important things, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, what lets the browser save data, and the Secure Socket Layer (SSL), what protects the privacy  and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name the company adapted the name \textit{Netscape Communications} and launched by the end of december the \textit{Netscape Navigator 1.0}, what also solved the problem with the name conflict regarding the NCSA Mosaic browser.
-		\\Because of the few competetors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was throught B2B-business and the stock markets. Espacially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$. That was a greet sign and it didn't end their; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications the browser wars started.
+		\\Because of the few competetors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was throught B2B-business and the stock markets. Espacially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$ [8]. That was a greet sign and it didn't end their; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications the browser wars started.
 		\subsection{Internet Explorer}
 		\textit{Internet Explorer 1.0} (furthemore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territorium. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was also the first true competetor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. The tides turned with IE 4.0, where Microsoft changed their strategy. Before IE 4.0 their browser was a free browser for the home, like Netscape, but Microsofts' browser was interferior in technology and had to be installed first, before you could use it. But IE 4.0 shipped with all Windows and Macintosh PCs', means the first browser most people interacted with after they bought a new PC was IE and not Netscape [7]. With that IE dethroned Netscape as the most used browser and send Netscape into the depths of nothingness. After the defeat of Netscape the development of Microsofts browser slacked down after the release of IE 6.0 in 2001. But this error made it possible for new competetors to emerge and evolve.
 		\subsection{Mozilla Firefox}
@@ -153,5 +153,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[6] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0 \newline
 	[7] "Microsoft and the Browser Wars" by Robert A.Levy, \url{https://pdfs.semanticscholar.org/1cf1/97ab7738244f2c45e6acec67051eb85f6243.pdf}, used for further reference in the browser wars times
+	\newline
+	[8] \url{https://www.fool.com/investing/general/2013/08/09/the-ipo-that-inflated-the-dot-com-bubble.aspx}
 
 \end{document}
