Added text and pictures to "next for browsers"

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -111,7 +111,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
 	%Pic of alexa, firefox vr, eye study
 		\subsection{Browsers becoming operating systems}
-		One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer.The patches where already steps into the right direction and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
+		One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the right direction. Another part is to make website be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
 
 		An good example for a website supporting Alan Kay's vision is lively-web.org
 		%Screenshot
@@ -121,7 +121,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		%Book,
 		\subsection{New technologies}
 			\subsubsection{WebVR Browsers}
-			Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.
+				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
 				[4]	Firefox Reality
@@ -129,15 +129,24 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 				[5] Supermedium Browser
 			\end{center}
 			\subsubsection{AR Browsers}
-			Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
-			%https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/
+				Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
+				%https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/
 		\subsection{Quantum computing}
 			Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
 			%TODO https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption
 		\subsection{Next for Browsers}
-		Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usabilty. These attributes with rise in the future as well for sure. Opera created an example for an more user friendly browser but even though it is already downloadable Opera Neon is still a work in progress.
-		Even though the steps are small, Browsers are becoming more and more like operating systems and with that closer to the original vision of Alan Key but they still have a long way to go since the they werent designed for that purpose.  
-		Little changed so farfaster, performance, Ux(Opera Neon), Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
+			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usabilty. These attributes with grow in the future as well for sure. 
+			Opera created an concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, but Opera Neon is still a work in progress.
+		 	\begin{center}
+		 		\includegraphics[scale=0.35]{OperaNeon.png}
+		 		[?]	Startscreen of Opera Neon
+		 	\end{center}
+		 	
+			Even though the steps are small, Browsers are becoming more and more like operating systems and with that closer to the original vision of Alan Key. But they still have a long way to go since the they werent designed for that purpose.
+			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can't be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies. 	 
+			%TODO Opera Neon source
+			%TODO Source https://www.lifewire.com/web-3-0-end-web-browser-3486610
+			Little changed so farfaster, performance, Ux(Opera Neon), Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
 		\subsection{Devices}
 
 	\section{Evaluation}
