Added new line after subsubsection

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -97,14 +97,20 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Features}
 			\subsubsection{History}
 			\subsubsection{Incognito mode}
+			\leavevmode\newline
 			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browser have some form of private browsing.
 			\subsubsection{Bookmarks}
+			\leavevmode\newline
 			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, altough called hotlists back then. Newer browsers have expanded the feature of bookmarks. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.
 			\subsubsection{Browser Extensions}
+			\leavevmode\newline
 			As the first major browser, \textit{Internet Explorer} introduced browser extensions with Version 5 in 1999. The other major browsers also added extensions over the years with Firefox in 2004, Opera in 2009 and Google Chrome and Safari in 2010. Nowadays most browsers support extensions to customize the user experience.
 			\subsubsection{Tabs}
+			\leavevmode\newline
+			\leavevmode\newline
 			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantial different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was however Firefox or more specifically its predecessor \textit{Phoenix}.
 			\subsubsection{Browser Chache}
+			\leavevmode\newline
 
 	%Prof meinte guter Fokus.
 	\section{Future of the Browser}
@@ -121,6 +127,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		%Book,
 		\subsection{New technologies}
 			\subsubsection{WebVR Browsers}
+				\leavevmode\newline
 				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
@@ -129,11 +136,13 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 				[5] Supermedium Browser
 			\end{center}
 			\subsubsection{AR Browsers}
+				\leavevmode\newline
 				Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
 				%https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/
-		\subsection{Quantum computing}
-			Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
-			%TODO https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption
+			\subsubsection{Quantum computing}
+			\leavevmode\newline
+				Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
+				%TODO 	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption
 		\subsection{Next for Browsers}
 			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usabilty. These attributes with grow in the future as well for sure. 
 			Opera created an concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, but Opera Neon is still a work in progress.
@@ -147,8 +156,6 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			%TODO Opera Neon source
 			%TODO Source https://www.lifewire.com/web-3-0-end-web-browser-3486610
 			Little changed so farfaster, performance, Ux(Opera Neon), Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
-		\subsection{Devices}
-
 	\section{Evaluation}
 
 	\section{Summery/Conclusion}
