Changed title of 1.1 introduction

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -21,8 +21,8 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\end{abstract}
 
 	\section{Introduction}
-		\subsection{What is this paper about}
-		This paper is about the history of the browsers and big improvements to the web throught some of these browsers. Another topic are some of the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
+		\subsection{History and Evolution of the Browser}
+		The following deals with history of the browsers and big improvements to the web throught some of these browsers. It continues with showing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
 		\subsection{What is a Browser}
 		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessable. A browser lets you visit websites and do activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using (for example: Microsoft Windows, Linux, Ubuntu, Mac OS, among others).
 
